fix: correct title spelling in index.html and adjust layout in AppLayout and Home components

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="icon"
       href="/booktrail-512.png"
     />
-    <title>BookTrail</title>
+    <title>BookTrails</title>
   </head>
   <body>
     <div id="root"></div>
