--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     />
     <link
       rel="icon"
-      href="/booktrail-512.png"
+      href="/favicon.ico"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/apple-touch-icon.png"
+    />
+    <link
+      rel="manifest"
+      href="/manifest.webmanifest"
     />
     <title>BookTrails</title>
   </head>
